--- a/index.html
+++ b/index.html
@@ -71,24 +71,27 @@
             <p>Valori di seno e coseno per gli angoli $\frac{\pi}{6}$, 
             $\frac{\pi}{4}$ e $\frac{\pi}{3}$.</p>
         </li>
-        <li><strong>Trigonometria</strong> triangoli rettangoli</br>
-            C13 4→35, 36, 37, 40, 55, 56, 57, 63, 65</li>
+        <li>
+            <h4>Trigonometria triangoli rettangoli</h4>
+            <p>Rapporto tra cateti, ipotenusa e angoli.</p>
+            <p><strong>Esercizi</strong> C13 4→12, 36, 37, 40, 55, 56, 57, 59, 
+            65, </li>
         <li>
             <h4>Circonferenza goniometrica</h4>
             <p>Definizione di circonferenza goniometrica. Estensione della 
             definizione di seno e coseno a tutti i punti della circonferenza 
             goniometrica. Prima relazione fondamentale.</p>
-            <p><strong>Esercizi</strong>C10 72, 74, 77, 79→82, 94→103</p>
+            <p><strong>Esercizi</strong> C10 72, 74, 77, 79→82, 94→103</p>
         </li>
         <li>
             <h4>Tangente</h4>
             <p>Due definizioni di tangente.</p>
-            <p><strong>Esercizi</strong>C10 128→140, 150→153, 155→162</p>
+            <p><strong>Esercizi</strong> C10 128→140, 150→153, 155→162</p>
         </li>
         <li>
             <h4>Coefficiente angolare</h4>
             <p>Significato geometrico della tangente.</br>
-            <p><strong>Esercizi</strong>C10 185→193</p>
+            <p><strong>Esercizi</strong> C10 185→193</p>
         </li>
         <li>
             <h4>Angoli notevoli</h4>
@@ -100,38 +103,26 @@
             <h4>Equazioni goniometriche elementari</h4>
             <p>Equazioni elementari in seno, coseno e tangente. Metodo per 
             risolverle che usa la circonferenza goniometrica.</p>
-            <p><strong>Esercizi</strong>C12 </p>
+            <p><strong>Esercizi</strong> C12 84→169</p>
         </li>
         <li>
             <h4>Equazioni goniometriche quasi elementari</h4>
             <p>Equazioni del tipo $\sin \alpha = \pm\sin \beta$, 
             $\sin \alpha = \pm \cos \beta$, $\cos \alpha = \pm \cos \alpha$, 
             $\tan \alpha = \pm \tan \beta$.</p>
-            <p><strong>Esercizi</strong>C12 </p>
+            <p><strong>Esercizi</strong> C12 171→218</p>
         </li>
         <li>
             <h4>Equazioni gonimetriche scomponibili</h4>
             <p>Esempi in cui l'algebra permette di scomporre equazioni 
             goniometriche complesse.</p>
-            <p><strong>Esercizi</strong> </p>
+            <p><strong>Esercizi</strong> C12 220→278</p>
         </li>
         <li>
             <h4>Disequazioni goniometriche elementari</h4>
             <p>Metodo della circonferenza goniometrica.</p>
-            <p><strong>Esercizi</strong>C12 </p>
+            <p><strong>Esercizi</strong> C12 531→570</p>
         </li>
-        <li><strong>Trigonometria</strong> approfondimento sui triangoli rettangoli</br>
-            C13 63→112</li>
-        <li><strong>Trigonometria</strong> area del triangolo</br>
-            C13 146→158</li>
-        <li><strong>Trigonometria</strong> teorema della corda</br>
-            C13 163→184</li>
-        <li><strong>Trigonometria</strong> teorema dei seni</br>
-            C13 187→205</li>
-        <li><strong>Trigonometria</strong> teorema del coseno</br>
-            C13 209→231</li>
-        <li><strong>Trigonometria</strong> triangoli qualunque</br>
-            C13 235→264</li>
         <li>
             <h4>Angoli orientati</h4>
             <p>Definizione di angolo orientato. Forma sintetica.</p>
@@ -154,12 +145,18 @@
             <h4>Funzioni inverse</h4>
             <p>Definizioni $\sin^{-1}$, $\cos^{-1}$ e $\tan^{-1}$. Necessarie
             restrizioni a dominio e codominio.</p>
-            <p><strong>Esercizi</strong>C10 277→327</p>
+            <p><strong>Esercizi</strong> C10 277→327</p>
+        </li>
+        <li>
+            <h4>Trigonometria: approfondimento sui triangoli rettangoli</h4>
+            <p>Area di un triangolo. Teorema della corda. Teorema dei seni. Teorema del coseno.
+            <p><strong>Esercizi</strong> C13 13→35, 38, 39, 41→44, 58→119, 
+            146→313</p>
         </li>
         <li>
             <h4>Formule di addizione</h4>
             <p>Come ricavare le formule di addizione. addizione e sottrazione in seno e coseno</p>
-            <p><strong>Esercizi</strong>C11 151→206, C12 19→25</li>
+            <p><strong>Esercizi</strong> C11 151→206, C12 19→25</li>
         <li>
             <h4>Angoli associati</h4>
             <p>Formule  goniometriche riguardo agli angoli associati. Come 
@@ -170,7 +167,7 @@
         <li>
             <h4>Formule di duplicazione</h4>
             <p>Ricavare le formule di duplicazione da quelle di addizione.</p>
-            <p><strong>Esercizi</strong>C11 242→316, C12 26→36</p>
+            <p><strong>Esercizi</strong> C11 242→316, C12 26→36</p>
         </li>
         <li>
             <h4>Formule di bisezione</h4>
@@ -206,36 +203,38 @@
             <h4>Equazioni lineari in seno e coseno</h4>
             <p>Stratagemmi algebrici. Formule parametriche. Metodo grafico. 
             Metodo dell'angolo aggiunto.</p>
-            <p><strong>Esercizi</strong>C11 207→216 </p>
+            <p><strong>Esercizi</strong> C11 207→216, C12 280→302</p>
         </li>
         <li>
             <h4>Equazioni omogenee di secondo grado in seno e coseno</h4>
             <p>Stratagemmi algebrici. Formule di liearizzazione (inverse delle 
             formule di duplicazione).</p>
-            <p><strong>Esercizi</strong> </p>
+            <p><strong>Esercizi</strong> C12 304→507</p>
         </li>
         <li>
             <h4>Sistemi di equazioni goniometriche</h4>
             <p>Sostituzione algebrica.</p>
-            <p><strong>Esercizi</strong> </p>
+            <p><strong>Esercizi</strong> C12 509→526</p>
         </li>
         <li>
             <h4>Disequazioni goniometriche</h4>
-            <p>Metodo del grafico. Scomposizione in fattori. Sistemi.</p>
-            <p><strong>Esercizi</strong>C12 </p>
+            <p>Metodo del grafico. Scomposizione in fattori. Disequazioni 
+            fratte. Sistemi di disequazioni.</p>
+            <p><strong>Esercizi</strong> C12 572→789</p>
         </li>
         <li>
             <h4>Equazioni goniometriche</h4>
             <p>Equazioni parametriche elementari. Equazioni di secondo grado di 
             una sola funzione goniometrica. Equazioni lineari di seno e 
             coseno.</p>
-            <p><strong>Esercizi</strong>C12 </p>
+            <p><strong>Esercizi</strong> C12 790→828</p>
         </li>
         <li>
             <h4>Secante, cosecante e cotangente</h4>
             <p>Definizione come funzioni reali. Definizione geometrica. Periodo.
             Grafico. Valori negli angoli notevoli.</p>
-            <p><strong>Esercizi</strong> C10 194→249, 253→276, C12 2→18, 61→70</p>
+            <p><strong>Esercizi</strong> C10 194→249, 253→276, C12 2→18, 
+            61→70, C13 46→54</p>
         </li>
         <li>
             <h4>I sottomultipli del grado</h4>
@@ -247,6 +246,10 @@
             <p>Come trovare l'angolo tra due rette dalle equazioni. Rapporto tra
             i coefficienti angolari di due rette perpendicolari. </p>
             <p><strong>Esercizi</strong> C11 217→240</p>
+        </li>
+        <li>
+            <h4>Esercizi finali di trigonometria</h4>
+            <p><strong>Esercizi</strong> C13 120→145, 314→461</p>
         </li>
     <ol>
 
