--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <li>
             <h4>Misura degli angoli</h4>
             <p>Definizione di angolo e arco. Misura in gradi sessagesimali.
-            Misura in radianti. Rapporto tra angolo, argo e raggio. Conversione
+            Misura in radianti. Rapporto tra angolo, arco e raggio. Conversione
             da gradi a radianti e viceversa.</p>
             <p><strong>Esercizi</strong> C10: 29→32, 34, 41→47, 50, 52, 53, 
             55→61</p>
