--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Intro</a></li>
-            <li><a href="#">4IC</a></li>
-            <li><a href="#">1LC</a></li>
+            <li><a href="m1mat.html">1media mat</a></li>
+            <li><a href="m2mat.html">2media mat</a></li>
+            <li><a href="m2sci.html">2media sci</a></li>
+            <li><a href="l1fis.html">1liceo fis</a></li>
+            <li><a href="l2fis.html">2liceo fis</a></li>
+            <li><a href="l4fis.html">4liceo fis</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -51,207 +55,8 @@
     </div> /.container -->
     
     <div class="container">
-      <h2>Trigonometria <em>remix</em></h2>
-      <ol>
-        <li>
-            <h4>Misura degli angoli</h4>
-            <p>Definizione di angolo e arco. Misura in gradi sessagesimali.
-            Misura in radianti. Rapporto tra angolo, arco e raggio. Conversione
-            da gradi a radianti e viceversa.</p>
-            <p><strong>Esercizi</strong> C10: 29→32, 34, 41→47, 50, 52, 53, 
-            55→61</p>
-        </li>
-        <li>
-            <h4>Seno e coseno</h4>
-            <p>Definizione di seno e coseno sui triangoli rettangoli.</p>
-            <p><strong>Esercizi</strong> C10 76</p>
-        </li>
-        <li>
-            <h4>Angoli notevoli</h4>
-            <p>Valori di seno e coseno per gli angoli $\frac{\pi}{6}$, 
-            $\frac{\pi}{4}$ e $\frac{\pi}{3}$.</p>
-        </li>
-        <li>
-            <h4>Trigonometria triangoli rettangoli</h4>
-            <p>Rapporto tra cateti, ipotenusa e angoli.</p>
-            <p><strong>Esercizi</strong> C13 4→12, 36, 37, 40, 55, 56, 57, 59, 
-            65, </li>
-        <li>
-            <h4>Circonferenza goniometrica</h4>
-            <p>Definizione di circonferenza goniometrica. Estensione della 
-            definizione di seno e coseno a tutti i punti della circonferenza 
-            goniometrica. Prima relazione fondamentale.</p>
-            <p><strong>Esercizi</strong> C10 72, 74, 77, 79→82, 94→103</p>
-        </li>
-        <li>
-            <h4>Tangente</h4>
-            <p>Due definizioni di tangente.</p>
-            <p><strong>Esercizi</strong> C10 128→140, 150→153, 155→162</p>
-        </li>
-        <li>
-            <h4>Coefficiente angolare</h4>
-            <p>Significato geometrico della tangente.</br>
-            <p><strong>Esercizi</strong> C10 185→193</p>
-        </li>
-        <li>
-            <h4>Angoli notevoli</h4>
-            <p>Valori di seno, coseno e tangente per i sedici angoli notevoli
-            principali</p>
-            <p><strong>Esercizi</strong> C10 250→252</p>
-        </li>
-        <li>
-            <h4>Equazioni goniometriche elementari</h4>
-            <p>Equazioni elementari in seno, coseno e tangente. Metodo per 
-            risolverle che usa la circonferenza goniometrica.</p>
-            <p><strong>Esercizi</strong> C12 84→169</p>
-        </li>
-        <li>
-            <h4>Equazioni goniometriche quasi elementari</h4>
-            <p>Equazioni del tipo $\sin \alpha = \pm\sin \beta$, 
-            $\sin \alpha = \pm \cos \beta$, $\cos \alpha = \pm \cos \alpha$, 
-            $\tan \alpha = \pm \tan \beta$.</p>
-            <p><strong>Esercizi</strong> C12 171→218</p>
-        </li>
-        <li>
-            <h4>Equazioni gonimetriche scomponibili</h4>
-            <p>Esempi in cui l'algebra permette di scomporre equazioni 
-            goniometriche complesse.</p>
-            <p><strong>Esercizi</strong> C12 220→278</p>
-        </li>
-        <li>
-            <h4>Disequazioni goniometriche elementari</h4>
-            <p>Metodo della circonferenza goniometrica.</p>
-            <p><strong>Esercizi</strong> C12 531→570</p>
-        </li>
-        <li>
-            <h4>Angoli orientati</h4>
-            <p>Definizione di angolo orientato. Forma sintetica.</p>
-            <p><strong>Esercizi</strong> C10 62→71</p>
-        </li>
-        <li>
-            <h4>Funzioni trigonometriche</h4>
-            <p>Seno e coseno definite come funzioni su tutto $\mathbb{R}$. 
-            Periodo di seno e coseno. Grafico di seno e coseno. La tangente come
-            funzione reale. Periodo della tangente. Grafico della tangente.</p>
-            <p><strong>Esercizi</strong> C10 73, 75, 78, 83→92, 104→127,
-            141→148, 163→184</p>
-        </li>
-        <li>
-            <h4>Soluzioni multiple alle equazioni goniometriche</h4>
-            <p>Espressione delle soluzioni in forma sintentica.</p>
-            <p><strong>Esercizi</strong> C12 71→78</p>
-        </li>
-        <li>
-            <h4>Funzioni inverse</h4>
-            <p>Definizioni $\sin^{-1}$, $\cos^{-1}$ e $\tan^{-1}$. Necessarie
-            restrizioni a dominio e codominio.</p>
-            <p><strong>Esercizi</strong> C10 277→327</p>
-        </li>
-        <li>
-            <h4>Trigonometria: approfondimento sui triangoli rettangoli</h4>
-            <p>Area di un triangolo. Teorema della corda. Teorema dei seni. Teorema del coseno.
-            <p><strong>Esercizi</strong> C13 13→35, 38, 39, 41→44, 58→119, 
-            146→313</p>
-        </li>
-        <li>
-            <h4>Formule di addizione</h4>
-            <p>Come ricavare le formule di addizione. addizione e sottrazione in seno e coseno</p>
-            <p><strong>Esercizi</strong> C11 151→206, C12 19→25</li>
-        <li>
-            <h4>Angoli associati</h4>
-            <p>Formule  goniometriche riguardo agli angoli associati. Come 
-            ricavare queste formule dalle formule di addizione. Come dedurle 
-            dalla circonferenza goniometrica.</p>
-            <p><strong>Esercizi</strong> C11 1→144</p>
-        </li>
-        <li>
-            <h4>Formule di duplicazione</h4>
-            <p>Ricavare le formule di duplicazione da quelle di addizione.</p>
-            <p><strong>Esercizi</strong> C11 242→316, C12 26→36</p>
-        </li>
-        <li>
-            <h4>Formule di bisezione</h4>
-            <p>Come ricavare le formule di bisezione da quelle di dupplicazione.
-            Come si possono razionalizzare le formule di bisezione della
-            tangente.</p>
-            <p><strong>Esercizi</strong> C11 318→351, C12 37→42</p>
-        </li>
-        <li>
-            <h4>Formule parametriche</h4>
-            <p>Come ricavare le formule parametriche da quelle di bisezione
-            della tangente.</p>
-            <p><strong>Esercizi</strong> C11 352→360</p>
-        </li>
-        <li>
-            <h4>Formule di prostaferesi</h4>
-            <p>Come ricavare le formule di prostaferesi.</p>
-            <p><strong>Esercizi</strong> C11 361→398</p>
-        </li>
-        <li>
-            <h4>Formule di Werner</h4>
-            <p>Come ricavare le formule di Werner da quelle di prostaferesi.</p>
-            <p><strong>Esercizi</strong> C11 399→511; C12 43→60</p>
-        </li>
-        <li>
-            <h4>Funzioni sinusoidali</h4>
-            <p>Funzioni trigonometriche e trasformazioni. Ampiezza, pulsazione e
-            fase. Periodo delle funzioni sinusoidali. Grafico delle funzioni
-            sinusoidali. Grafici di altre semplici funzioni derivate.</p>
-            <p><strong>Esercizi</strong> C10 328→498; C11 145→149</p>
-        </li>
-        <li>
-            <h4>Equazioni lineari in seno e coseno</h4>
-            <p>Stratagemmi algebrici. Formule parametriche. Metodo grafico. 
-            Metodo dell'angolo aggiunto.</p>
-            <p><strong>Esercizi</strong> C11 207→216, C12 280→302</p>
-        </li>
-        <li>
-            <h4>Equazioni omogenee di secondo grado in seno e coseno</h4>
-            <p>Stratagemmi algebrici. Formule di liearizzazione (inverse delle 
-            formule di duplicazione).</p>
-            <p><strong>Esercizi</strong> C12 304→507</p>
-        </li>
-        <li>
-            <h4>Sistemi di equazioni goniometriche</h4>
-            <p>Sostituzione algebrica.</p>
-            <p><strong>Esercizi</strong> C12 509→526</p>
-        </li>
-        <li>
-            <h4>Disequazioni goniometriche</h4>
-            <p>Metodo del grafico. Scomposizione in fattori. Disequazioni 
-            fratte. Sistemi di disequazioni.</p>
-            <p><strong>Esercizi</strong> C12 572→789</p>
-        </li>
-        <li>
-            <h4>Equazioni goniometriche</h4>
-            <p>Equazioni parametriche elementari. Equazioni di secondo grado di 
-            una sola funzione goniometrica. Equazioni lineari di seno e 
-            coseno.</p>
-            <p><strong>Esercizi</strong> C12 790→828</p>
-        </li>
-        <li>
-            <h4>Secante, cosecante e cotangente</h4>
-            <p>Definizione come funzioni reali. Definizione geometrica. Periodo.
-            Grafico. Valori negli angoli notevoli.</p>
-            <p><strong>Esercizi</strong> C10 194→249, 253→276, C12 2→18, 
-            61→70, C13 46→54</p>
-        </li>
-        <li>
-            <h4>I sottomultipli del grado</h4>
-            <p>Definizione di minuti primi e minuti secondi.</p>
-            <p><strong>Esercizi</strong> C10: 1→28, 33, 35→40, 48, 49, 51, 54</p>
-        </li>
-        <li>
-            <h4>Applicazioni alla geometria</h4>
-            <p>Come trovare l'angolo tra due rette dalle equazioni. Rapporto tra
-            i coefficienti angolari di due rette perpendicolari. </p>
-            <p><strong>Esercizi</strong> C11 217→240</p>
-        </li>
-        <li>
-            <h4>Esercizi finali di trigonometria</h4>
-            <p><strong>Esercizi</strong> C13 120→145, 314→461</p>
-        </li>
-    <ol>
+      <h2>Conoscenze</h2>
+      <p>Seleziona la classe nella barra in alto.</p>
 
     </div>
     
