--- a/l2fis.html
+++ b/l2fis.html
@@ -51,11 +51,19 @@
 
     <div class="container">
       <div class="main-heading">
-        <h1>Classe</h1>
+        <h1>Classe 2° liceo - Fisica - Villa Adelina</h1>
         <p class="lead">informazioni ed esercizi</p>
       </div>
     </div>
-    
+
+    <div class="container">
+        <h3>Conoscenze</h3>
+        <ol>
+        <li><strong>Misura.</strong> Grandezza fisica. Misurare. Misure dirette, indirette. Definizione operativa. Sistema Internazionale. Multipli delle unità di misura. Tempo. Secondo. Lunghezza. Metro. Area. Volume. </li>
+        <li><strong>Incertezza.</strong> Precisione. Portata. Sensibilità. Prontezza. Incertezza. Errori casuali, sistematici. Valore medio. Errore assoluto. Notazione scientifica. Ordine di grandezza.</li>
+        <li><strong>Meccanica.</strong> Posizione. Punto materiale. Traiettoria. Sistema di riferimento. Moto unidimensionale. Variazione di una grandezza fisica. Velocità media. </li>
+        </ol>
+    </div>
 
 
     <!-- Bootstrap core JavaScript
