--- a/l1fis.html
+++ b/l1fis.html
@@ -59,8 +59,9 @@
     <div class="container">
         <h3>Conoscenze</h3>
         <ol>
-        <li><strong>Misura.</strong> Grandezza fisica. Misurare. Misure dirette, indirette. Definizione operativa. Sistema Internazionale. Multipli delle unità di misura. Tempo. Secondo. Lunghezza. Metro. Area. Volume. </li>
-        <li><strong>Incertezza.</strong> Precisione. Portata. Sensibilità. Prontezza. Incertezza. Errori casuali, sistematici. Valore medio. Errore assoluto. Notazione scientifica. Ordine di grandezza.</li>
+        <li><strong>Misura.</strong> Grandezza fisica. Misurare. Misure dirette, indirette. Definizione operativa. Sistema Internazionale. Multipli delle unità di misura. Tempo. Secondo. Lunghezza. Metro. Area. Volume. Notazione scientifica. Ordine di grandezza.</li>
+        <li><strong>Incertezza.</strong> Precisione. Portata. Sensibilità. Prontezza. Incertezza. Errori casuali, sistematici. Valore medio. Errore assoluto.</li>
+        <li><strong>Cinematica unidimensionale.</strong> Punto materiale. Traiettoria. Sistema di riferimento. Istante. Delta $\Delta$.</li>
         </ol>
     </div>
 
