--- a/m1mat.html
+++ b/m1mat.html
@@ -61,6 +61,7 @@
         <ol>
         <li><strong>Numeri naturali.</strong> Scrittura posizionale. Unità, decine, centinaia. Migliaia, milioni, miliardi. Confronto: minore e maggiore. Addizione, addendi, somma. Sottrazione, minuendo, sottraendo, differenza. Moltiplicazione, fattori, prodotto. Divisione, dividendo, divisore, quoziente.</li>
         <li><strong>Numeri decimali.</strong> Decimali, decimi, centesimi, millesimi. Approssimare, per eccesso, per difetto. Operazioni con i decimali: addizione, sottrazione, moltiplicazione, divisione.</li>
+        <li><strong>Espressioni.</strong> Parentesi.</li>
         </ol>
     </div>
     
