--- a/l1fis.html
+++ b/l1fis.html
@@ -61,7 +61,7 @@
         <ol>
         <li><strong>Misura.</strong> Grandezza fisica. Misurare. Misure dirette, indirette. Definizione operativa. Sistema Internazionale. Multipli delle unità di misura. Tempo. Secondo. Lunghezza. Metro. Area. Volume. Notazione scientifica. Ordine di grandezza.</li>
         <li><strong>Incertezza.</strong> Precisione. Portata. Sensibilità. Prontezza. Incertezza. Errori casuali, sistematici. Valore medio. Errore assoluto.</li>
-        <li><strong>Cinematica unidimensionale.</strong> Punto materiale. Traiettoria. Sistema di riferimento. Istante. Delta $\Delta$.</li>
+        <li><strong>Cinematica unidimensionale.</strong> Punto materiale. Traiettoria. Sistema di riferimento. Istante. Delta $\Delta$. Velocità media.</li>
         </ol>
     </div>
 
