--- a/l2fis.html
+++ b/l2fis.html
@@ -63,6 +63,26 @@
         <li><strong>Incertezza.</strong> Precisione. Portata. Sensibilità. Prontezza. Incertezza. Errori casuali, sistematici. Valore medio. Errore assoluto. Notazione scientifica. Ordine di grandezza.</li>
         <li><strong>Meccanica.</strong> Posizione. Punto materiale. Traiettoria. Sistema di riferimento. Moto unidimensionale. Variazione di una grandezza fisica. Velocità media. </li>
         </ol>
+        
+        <h3>Problemi</h3>
+        <ol>
+        <li><a href="img/amaldi/problema01.png">Problema 01</a></li>
+        <li><a href="img/amaldi/problema03.png">Problema 03</a></li>
+        <li><a href="img/amaldi/problema04.png">Problema 04</a></li>
+        <li><a href="img/amaldi/problema05.png">Problema 05</a></li>
+        <li><a href="img/amaldi/problema07.png">Problema 07</a></li>
+        <li><a href="img/amaldi/problema11.png">Problema 11</a></li>
+        <li><a href="img/amaldi/problema14.png">Problema 14</a></li>
+        <li><a href="img/amaldi/problema20.png">Problema 20</a></li>
+        <li><a href="img/amaldi/problema24.png">Problema 24</a></li>
+        <li><a href="img/amaldi/problema25.png">Problema 25</a></li>
+        <li><a href="img/amaldi/problema26.png">Problema 26</a></li>
+        <li><a href="img/amaldi/problema27.png">Problema 27</a></li>
+        <li><a href="img/amaldi/problema28.png">Problema 28</a></li>
+        <li><a href="img/amaldi/problema29.png">Problema 29</a></li>
+        <li><a href="img/amaldi/problema31.png">Problema 31</a></li>
+        <li><a href="img/amaldi/problemb31.png">Problema 31</a> (altro)</li>
+        <li><a href="img/amaldi/problema35.png">Problema 35</a></li>
     </div>
 
 
