--- a/l4fis.html
+++ b/l4fis.html
@@ -68,6 +68,15 @@
         <ol>
         <li>Esercizi del <a href="img/amaldi/esercizi_primo_capitolo.pdf">primo capitolo</a>.</li>
         </ol>
+        
+        <h3>Video delle lezioni</h3>
+        <p>Mi scuso per la scarsa qualità mia e del video. Vedremo di fare meglio in futuro.</p>
+        <ol>
+        <li><a href="https://youtu.be/u2IX7NgXHuQ?list=PLp2JGatBge1fQPfxqo2BKIowPVlvqd8m9">Fenomeni elettrici</a></li>
+        <li><a href="https://youtu.be/Hdlg04kx8Jg?list=PLp2JGatBge1fQPfxqo2BKIowPVlvqd8m9">Thomson e Rutherford</a></li>
+        <li><a href="https://youtu.be/d3Y2pqKGEp8?list=PLp2JGatBge1fQPfxqo2BKIowPVlvqd8m9">Benjamin Franklin</a></li>
+        <li><a href="https://youtu.be/ZHhxQg3m73g?list=PLp2JGatBge1fQPfxqo2BKIowPVlvqd8m9">Induzione nei conduttori</a></li>
+        </ol>
     </div>
     
 
