--- a/m1mat.html
+++ b/m1mat.html
@@ -60,8 +60,20 @@
         <h3>Conoscenze</h3>
         <ol>
         <li><strong>Numeri naturali.</strong> Scrittura posizionale. Unità, decine, centinaia. Migliaia, milioni, miliardi. Confronto: minore e maggiore. Addizione, addendi, somma. Sottrazione, minuendo, sottraendo, differenza. Moltiplicazione, fattori, prodotto. Divisione, dividendo, divisore, quoziente.</li>
-        <li><strong>Numeri decimali.</strong> Decimali, decimi, centesimi, millesimi. Approssimare, per eccesso, per difetto. Operazioni con i decimali: addizione, sottrazione, moltiplicazione, divisione.</li>
+        <li><strong>Numeri decimali.</strong> Decimali, decimi, centesimi, millesimi. Approssimare, per eccesso, per difetto.</li>
         <li><strong>Espressioni.</strong> Parentesi.</li>
+        <li><strong>Misura.</strong> Grandezza. Misura. Unità di misura. Lunghezza, metro. Massa, grammo. Capacità, litro. Tempo, secondo. Velocità, kilometri orari, metri al secondo. Grandezza derivata. Multipli, deca-, etto-, kilo-. Sottomultipli, deci-, centi- milli-.</li>
+        <li><strong>Elementi di geometria.</strong> Punto. Linea, curva, spezzata, mista, aperta, chiusa, intrecciata, semplice. Retta. Semiretta. Segmento, estremi, lunghezza, punto medio. Piano. Rette parallele, incidenti, perpendicolari. Distanza punto-retta. Circonferenza, centro, raggio, diametro, corda, arco. Poligoni, regolari, concavi, convessi, diagonali. Triangolo, scaleno, isoscele, equilatero, rettangolo. Quadrilatero, parallelogramma, rettangolo, quadrato.</li>
+        <li><strong>Piano cartesiano.</strong> Assi. Origine. Coordinate.</li>
+        <li><strong>Angoli.</strong> Angolo, acuto, retto, ottuso, piatto, concavo, giro. Angoli consecutivi, adiacenti, complementari, supplementari, esplementari. Angoli opposti al vertice. Angoli corrispondenti, alterni, coniugati, interni, esterni. Bisettrice. Misura di ampiezza, grado, primi, secondi.</li>
+        </ol>
+        
+        <h3>Competenze</h3>
+        <ol>
+        <li><strong>Operazioni con i decimali.</strong> Addizione e sottrazione in colonna. Moltiplicazione con i decimali. Divisione lunga.</li>
+        <li><strong>Misure.</strong> Conversione tra multipli e sottomultipli. Problemi che riguardano misure.</li>
+        <li><strong>Piano cartesiano.</strong> Trovare un punto date le coordinate. Indovinare le coordinate di un punto. Tracciare una retta dati due punti. Tracciare rette parallele o perpendicolari ad una retta data.</li>
+        <li><strong>Angoli.</strong> Disegnare un angolo con un ampiezza data. Misurare l'ampiezza di un angolo dato.</li>
         </ol>
     </div>
     
