--- a/m2sci.html
+++ b/m2sci.html
@@ -60,6 +60,8 @@
         <h3>Conoscenze</h3>
         <ol>
         <li><strong>Soluzioni.</strong> Solvente. Soluto. Soluzione. Volume. Concentrazione, percentuale. Separazione delle soluzioni per evaporazione, distillazione, cristallizzazione, cromatografia. Alterazione delle proprietà fisiche nelle soluzini: ebollizione, solidificazione, densità. Acido, basico, neutro. Cartine tornasole.</li>
+        <li><strong>Reazioni.</strong> Sostanza. Reazione. Reagenti, prodotto. Legge di conservazine della massa. Atomi, molecole. Protoni, elettroni, neutroni, nucleo. Livelli energetici. Legami chimici. Composti, elementi. Nomenclatura. Tavola periodica, numero atomico, gruppi, periodi. Equazioni chimiche. Esotermico. Endotermico. Combustione.</li>
+        <li><strong>Ecologia.</strong> Ecologia. Interazioni. Ambiente. Organismo, popolazione, comunità, ecosistema, biosfera. Fattori biotici, abiotici. Fattori limitanti. Predazine. Competizione intraspecifica, interspecifica. Simbiosi: mutualismo, parassitismo. Relazioni trofiche. Produttori, consumatori, decompositori. Catena alimetare. Rete alimentare. Ciclo della materia. Ciclo della energia. Etologia. Adattamento. Comportamento innato, appreso. Comunicazione acustica, visiva, olfattiva.</li>
         </ol>
     </div>
 
