--- a/m2mat.html
+++ b/m2mat.html
@@ -65,7 +65,16 @@
         <li><strong>Divisibilità.</strong> Divisore. Criterio di divisibilità per 10, 2, 5, 4, 3, 9. Numero primo, numero composto. Scomposizione. Massimo comun divisore. Primi relativi. Multipli. Minimo comune multiplo.</li>
         <li><strong>Insiemi.</strong> Elemento. Appartenenza. Diagramma di Venn. Sottoinsiemi. Unione, intersezione. Insiemi disgiunti.</li>
         <li><strong>Frazioni.</strong> Numeratore. Denominatore. Frazioni equivalenti. Rappresentazione lineare, rettangolare, torta. Frazioni di numeri naturali. Confronto tra frazioni. Addizione, sottrazione, moltiplicazione, divisione di frazioni.</li>
-        <li><strong>Percentuali.</strong> Definizione di percentuale.</li>
+        <li><strong>Percentuali.</strong> Definizione di percentuale. Sconto. Rincaro.</li>
+        <li><strong>Radici.</strong> Definizione di radice.</li>
+        </ol>
+        
+        <h3>Competenze</h3>
+        <ol>
+        <li><strong>Operazioni con i decimali.</strong> Addizione e sottrazione in colonna. Moltiplicazione con i decimali. Divisione lunga.</li>
+        <li><strong>Fattorizzazione.</strong>Scompsizione di un numero in fattori primi.</li>
+        <li><strong>Frazioni.</strong>Semplificazione e complicazione di frazioni equivalenti. Somma e differenza di frazioni.</li>
+        <li><strong>Percentuali.</strong> Conversione percentuali, frazioni, decimali. Calcolo totale, parziale, percentuale. Applicare lo sconto. Applicare il rincaro.</li>
         </ol>
     </div>
     
