--- a/m2mat.html
+++ b/m2mat.html
@@ -57,6 +57,43 @@
     </div>
 
     <div class="container">
+      <h3>Compiti per le vacanze</h3>
+      <div class="row aux">
+        <div class="col-xs-12">
+          <strong>Calcola il risultato</strong> delle seguenti operazioni: <br/>
+          <center>
+            $27.3 + 19.5$ $\qquad 73.5 - 26.7$ $\qquad 18.3 \cdot 2.76$ $\qquad 278.46 : 6.3$
+          </center><br />
+          <center>
+            $\frac{6}{7} + \frac{5}{21}$ $\qquad \frac{15}{16} - \frac{5}{12}$ $\qquad \frac{4}{9} \cdot \frac{21}{32}$ $\qquad \frac{12}{14} : \frac{6}{35}$
+          </center>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <strong>Scomponi</strong> i seguenti numeri<br />
+          <center>
+            $1617$ $\qquad 1300$ $\qquad 2295$ $\qquad 798$
+          </center>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <strong>Risolvi.</strong> Nell'ultima verifica, l'$80\%$ degli studenti ha raggiunto la sufficienza. Di quelli che hanno raggiunto la sufficienza, il $65\%$ erano ragazze. Le ragazze che hanno raggiunto la sufficienza erano $13$. Quanti studenti hanno raggiunto la sufficienza tra maschi e femmine? Quanti studenti ci sono nella classe in totale?
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <strong>Calcola.</strong>
+            <center>
+              $\left[2 + 3^2 \cdot \left(\sqrt{16 - 12} + 1\right)  + 3 \cdot \left(-2\right)^3\right]^2 : \left( \sqrt{36} - \sqrt{121} \right)$<br />
+              $11 - \left[\sqrt{9} + \left(2 + 5\right)^3 : \left(\sqrt{144}:\sqrt{4} + 1\right)^2\right] + 3^2$
+            </center>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
         <h3>Conoscenze</h3>
         <ol>
         <li><strong>Numeri naturali.</strong> Scrittura posizionale. Unità, decine, centinaia. Migliaia, milioni, miliardi. Confronto: minore e maggiore. Addizione, addendi, somma. Sottrazione, minuendo, sottraendo, differenza. Moltiplicazione, fattori, prodotto. Divisione, dividendo, divisore, quoziente, resto. Proprietà commutativa, associativa, invariantiva. Espressioni, precedenza, parentesi.</li>
