--- a/m1mat.html
+++ b/m1mat.html
@@ -57,6 +57,49 @@
     </div>
 
     <div class="container">
+      <h3>Esercizi per le vacanze</h3>
+      <div class="row aux">
+        <div class="col-xs-12">
+          <strong>Calcola il risultato</strong> delle seguenti operazioni: <br/>
+          <center>
+            $27.3 + 19.5$ $\qquad 73.5 - 26.7$ $\qquad 18.3 \cdot 2.76$ $\qquad 278.46 : 6.3$
+          </center>
+        </div>
+      </div>
+      <div class="row aux">
+        <div class="col-xs-12">
+          <strong>Converti</strong> le seguenti misure nelle unità indicate<br/>
+          <center>
+            $25.8 \mathrm{m}$ in $\mathrm{hm}$ $\qquad 3.16\mathrm{kg}$ in $\mathrm{g}$ $\qquad 183\mathrm{ml}$ in $\mathrm{l}$
+          </center>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <strong>Scomponi</strong> i seguenti numeri<br />
+          <center>
+            $1617$ $\qquad 1300$ $\qquad 2295$ $\qquad 798$
+          </center>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <strong>Risolvi.</strong> Ho in mente un numero. Posso raddoppiare questo numero e aggiungere poi il doppio di $11$. Oppure posso togliere una unità al numero che avevo pensato ed elevarlo al quadrato. In entrambi i casi ottengo lo stesso risultato. A quale numero avevo pensato?
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <strong>Calcola.</strong>
+            <center>
+              $\displaystyle \frac{9^2 : 3^2 - 2^2 + 8^4 : 8^3}{16 \cdot \left( 54 - 3\cdot 17 \right) : 4^2} \qquad$ e
+              $\displaystyle \qquad \left[(15 - 10) \cdot (3 + 1) - (20 - 13) \cdot (7 - 5)\right]^4 : \left( \frac{7 \cdot 3 - 1}{2 \cdot 5} \right)^4 - 2^4$
+            </center>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="container">
         <h3>Conoscenze</h3>
         <ol>
         <li><strong>Numeri naturali.</strong> Scrittura posizionale. Unità, decine, centinaia. Migliaia, milioni, miliardi. Confronto: minore e maggiore. Addizione, addendi, somma. Sottrazione, minuendo, sottraendo, differenza. Moltiplicazione, fattori, prodotto. Divisione, dividendo, divisore, quoziente.</li>
